Fixed courses cards background size
* Course images should cover the full card.

--- a/scss/components/cards.scss
+++ b/scss/components/cards.scss
@@ -26,6 +26,7 @@
         width: 100%;
         height: 180px;
         background-position: center;
+        background-size: cover;
     }
 
     .title {
